# Generative-AI-and-NLP-Projects

./: .env  Chat with Multiple Pdfs - Using RAG and LangChain  README.md  htmlTemplates.py  llm_SFT.py  mistral_zeroshot.py  requirements.txt  run_sft.sh  setup.sh
Chat with PDFs - Using LangChain and RAG/: app.py
Newsletter-Application-CrewAI/: app.py  pyproject.toml  requirements.txt
Newsletter-Generator-App/: README.md  requirements.txt
Newsletter-Generator-App/gui/: app.py
Newsletter-Generator-App/gui/logs/: 2024-07-14_15-56-05.edit_task.md  2024-07-14_15-56-05.research_task.md  2024-07-14_15-56-06.newsletter_task.html
Newsletter-Generator-App/src/newsletter_gen/: crew.py  main.py
Newsletter-Generator-App/src/newsletter_gen/tools/: custom_tool.py
Sentiment Analysis with Sequence Models/: Assignment_1_Simple_Sentiment_Analysis.ipynb  readme.md  requirements.txt
Seq-to-Seq Models for Machine Translation/: Assignment-2-machine-translation.ipynb  readme.md
Stock Market Assistant/: README.md  Streamlit app.py  finetuned_accuracy.py  llm_SFT.py  llm_sft_upsampling.py  mistral_zeroshot.py
Stock Market Assistant/Codes/: inference.py  llm_sft_downsampling.py  run.sh
Stock Market Assistant/Datasets/: one_month_news_summary.json  predictions_test_set.csv  stock_data.csv
Stock Market Assistant/Project Report & Presentation/: Project Presentation - AI6127.pptx
