[tool.poetry]
name = "newsletter_gen"
version = "0.1.0"
description = "newsletter-gen using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.36.1" }
langchain-anthropic = "^0.1.20"
langchain-groq = "^0.1.6"
streamlit = "^1.36.0"

[tool.poetry.scripts]
newsletter_gen = "newsletter_gen.main:run"
train = "newsletter_gen.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
